# SD-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: paths.yaml
src/sdframework/: __init__.py  config.py  constants.py  indices.py  io.py  plotting.py
src/soyini/: __init__.py  classification.py  config.py  constants.py  indices.py  plotting.py  seasonal.py
tests/: test_smoke.py
workflows/: 01_join_tif_elevation.ipynb  02_Combine_CaSR_data.ipynb  03_Calculate_SWEI.ipynb  03_SWEI.ipynb  04_Calculate_SPI.ipynb  04_SPI.ipynb  05_SD_classification.ipynb  05_SD_classification_clean_workflow.ipynb
