[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "soyini"
version = "0.1.0"
description = "SOYINI - snow drought monitoring and analysis framework for Alberta (CaSR reanalysis)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "geopandas",
    "rasterio",
    "rasterstats",
    "shapely",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "netcdf4",
    "h5py",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
